# VeriLuxe-contracts

./: Dockerfile  README.md
.github/: WORKFLOWS.md  dependabot.yml
.github/workflows/: api-ci.yml  contracts-ci.yml  deploy.yml
contracts/: README.md
contracts/api/: Cargo.toml  README.md
contracts/api/docs/: postman-testing-guide.md
contracts/api/src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  soroban_client.rs
contracts/api/tests/: integration_tests.rs
contracts/contracts/: Cargo.toml  README.md
contracts/contracts/deploy-js/: README.md  deploy.js  python-deploy.py
contracts/contracts/src/: lib.rs
contracts/scripts/: README.md  generate_keypair.js  generate_keypair.py
